<resources>
    <string name="app_name">Movie App</string>

    <!--    TabLayout-->
    <string name="title_trailers_tab_layout">Trailers</string>
    <string name="title_similar_tab_layout">Similares</string>
    <string name="title_comments_tab_layout">Comentários</string>

    <!--    BottomBar-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_search">Pesquisar</string>
    <string name="title_menu_favorite">Favoritos</string>
    <string name="title_menu_download">Downloads</string>
    <string name="title_menu_profile">Perfil</string>

    <!--    Generic-->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_phone_empty">Digite seu telefone</string>
    <string name="text_phone_invalid">Digite um telefone válido</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_formated_value">R$ %1$s</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="user_not_found_register_fragment">Usuário não encontrado.</string>

    <!--    OnboardingFragment-->
    <string name="text_button_onboarding_fragment">Iniciar</string>

    <!--    HomeAuthFragment-->
    <string name="title_home_auth_fragment">Entrar com</string>
    <string name="button_continue_with_facebook_home_auth_fragment">Continuar com o Facebook</string>
    <string name="button_continue_with_google_home_auth_fragment">Continuar com o Google</string>
    <string name="text_social_or_password_home_auth_fragment">ou</string>
    <string name="button_sign_in_with_password_home_auth_fragment">Entrar com senha</string>
    <string name="text_dont_have_an_account_home_auth_fragment">Não tem uma conta?</string>
    <string name="text_sign_up_home_auth_fragment">Inscrever-se</string>

    <!--    RegisterFragment-->
    <string name="title_register_fragment">Crie sua conta</string>
    <string name="text_hint_edit_email_register_fragment">Email</string>
    <string name="text_hint_edit_password_register_fragment">Senha</string>
    <string name="text_button_sign_up_register_fragment">Inscrever-se</string>
    <string name="text_continue_social_network_register_fragment">ou continuar com</string>
    <string name="text_already_account_register_fragment">já tem uma conta?</string>
    <string name="text_button_sign_in_register_fragment">Entrar</string>
    <string name="text_email_empty_register_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_register_fragment">Digite uma senha</string>

    <!--    LoginFragment-->
    <string name="title_login_fragment">Faça login na sua conta</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Senha</string>
    <string name="text_button_sign_in_login_fragment">Entrar</string>
    <string name="text_forgot_password_login_fragment">Esqueceu a senha?</string>
    <string name="text_continue_social_network_login_fragment">ou continuar com</string>
    <string name="text_email_empty_login_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_login_fragment">Digite seu senha</string>

    <!--    ForgotFragment-->
    <string name="title_forgot_fragment">Crie sua nova senha</string>
    <string name="text_hint_edit_email_forgot_fragment">Email</string>
    <string name="text_button_forgot_fragment">Recuperar conta</string>
    <string name="text_email_empty_forgot_fragment">Digite um e-mail válido</string>
    <string name="text_send_email_success_forgot_fragment">Email enviado com sucesso!</string>

    <!--    GenreItem-->
    <string name="text_show_all_genre_item">Ver todos</string>

    <!--    MovieGenreFragment-->
    <string name="text_search_hint_movie_genre_fragment">Pesquisa</string>

    <!--    MovieDetailsFragment-->
    <string name="text_button_play_movie_details_fragment">Play</string>
    <string name="text_button_download_movie_details_fragment">Download</string>
    <string name="text_all_genres_movie_details_fragment">Genêro: %1$s</string>

    <!--    SearchFragment-->
    <string name="text_title_empty_search_fragment">Não encontrado</string>
    <string name="text_message_empty_search_fragment">Desculpe, a palavra-chave que você digitou não foi encontrada. Tente verificar novamente ou pesquise com outras palavras-chave.</string>

    <!--    DownloadFragment-->
    <string name="text_title_download_fragment">Downloads</string>
    <string name="text_title_empty_state_download_fragment">Sua lista está vazia</string>
    <string name="text_message_empty_state_download_fragment">Parece que você não realizou o download de nenhum filme.</string>

    <!--    FavoriteFragment-->
    <string name="text_title_favorite_fragment">Favoritos</string>
    <string name="text_title_empty_state_favorite_fragment">Sua lista está vazia</string>
    <string name="text_message_empty_state_favorite_fragment">Parece que você não adicionou nenhum filme aos favoritos.</string>

    <!--    DialogDownloading-->
    <string name="text_title_dialog_downloading">Download</string>
    <string name="text_message_dialog_downloading">Filmes ainda baixando...\nAguarde ou oculte o processo</string>
    <string name="text_hide_dialog_downloading">Esconder</string>
    <string name="text_downloaded_size_dialog_downloading">%1$s / %2$s</string>
    <string name="text_download_progress_dialog_downloading">%1$d%%</string>

    <!--    BottomSheetDeleteMovie-->
    <string name="text_title_bottom_sheet_delete_movie">Deletar</string>
    <string name="text_message_bottom_sheet_delete_movie">Tem certeza de que deseja excluir o download deste filme?</string>
    <string name="text_cancel_button_bottom_sheet_delete_movie">Cancelar</string>
    <string name="text_confirm_button_bottom_sheet_delete_movie">Sim, deletar</string>

    <!--    ProfileFragment-->
    <string name="text_edit_profile_profile_fragment">Editar perfil</string>
    <string name="text_user_full_name_profile_fragment">%1$s %2$s</string>
    <string name="text_notificate_profile_fragment">Notificações</string>
    <string name="text_download_profile_fragment">Downloads</string>
    <string name="text_security_profile_fragment">Segurança</string>
    <string name="text_language_profile_fragment">Idioma</string>
    <string name="text_dark_mode_profile_fragment">Modo escuro</string>
    <string name="text_helper_profile_fragment">Centro de ajuda</string>
    <string name="text_privacy_policy_profile_fragment">Política de privacidade</string>
    <string name="text_logout_profile_fragment">Sair</string>

    <!--    EditProfileFragment - XML-->
    <string name="text_title_edit_profile_fragment">Editar perfil</string>
    <string name="text_photo_empty_edit_profile_fragment">%1$s %2$s</string>
    <string name="text_hint_edit_name_edit_profile_fragment">nome</string>
    <string name="text_hint_edit_surname_edit_profile_fragment">sobrenome</string>
    <string name="text_hint_edit_phone_edit_profile_fragment">telefone</string>
    <string name="text_hint_edit_genre_edit_profile_fragment">gênero</string>
    <string name="text_hint_edit_country_edit_profile_fragment">país</string>
    <string name="text_button_update_edit_profile_fragment">Atualizar</string>

    <!--    EditProfileFragment-->
    <string name="text_name_empty_edit_profile_fragment">Digite seu nome</string>
    <string name="text_surname_empty_edit_profile_fragment">Digite seu sobrenome</string>
    <string name="text_phone_empty_edit_profile_fragment">Digite seu telefone</string>
    <string name="text_phone_invalid_edit_profile_fragment">Digite um telefone válido</string>
    <string name="text_genre_empty_edit_profile_fragment">Digite seu gênero</string>
    <string name="text_country_empty_edit_profile_fragment">Digite seu país</string>
    <string name="text_update_profile_success_edit_profile_fragment">Perfil atualizado com sucesso!</string>

    <!--    BottomSheetLogout-->
    <string name="text_title_bottom_sheet_logout">Sair</string>
    <string name="text_message_bottom_sheet_logout">Tem certeza de que deseja sair?</string>
    <string name="text_cancel_button_bottom_sheet_logout">Cancelar</string>
    <string name="text_confirm_button_bottom_sheet_logout">Sim, sair</string>

    <!--    BottomSheetPermissionDenied-->
    <string name="text_title_bottom_sheet_permission_denied">Permissão negada</string>
    <string name="text_message_bottom_sheet_permission_denied">Para acessar este recurso, você precisa aceitar a permissão.</string>
    <string name="text_cancel_button_bottom_sheet_permission_denied">Cancelar</string>
    <string name="text_confirm_button_bottom_sheet_permission_denied">Aceitar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>