<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_home"
        android:title="@string/title_menu_home"
        android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/menu_search"
        android:title="@string/title_menu_search"
        android:icon="@drawable/ic_menu_search"/>

    <item android:id="@+id/menu_favorite"
        android:title="@string/title_menu_favorite"
        android:icon="@drawable/ic_menu_favorite"/>

    <item android:id="@+id/menu_download"
        android:title="@string/title_menu_download"
        android:icon="@drawable/ic_menu_download"/>

    <item android:id="@+id/menu_profile"
        android:title="@string/title_menu_profile"
        android:icon="@drawable/ic_menu_profile"/>

</menu>