<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_700"
        android:text="@string/text_title_dialog_downloading"
        android:textAlignment="center"
        android:textColor="@color/color_default"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/urbanist_400"
        android:text="@string/text_message_dialog_downloading"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="16sp" />

    <include
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_downloading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/urbanist_700"
            android:textColor="#212121"
            tools:text="457.2 / 968.5 MB" />

        <TextView
            android:id="@+id/text_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_700"
            android:textColor="@color/color_default"
            tools:text="47%" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:trackCornerRadius="100dp"
            app:trackThickness="8dp"
            tools:progress="47" />

        <ImageButton
            android:id="@+id/ib_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_close_black_24dp"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_hide"
        style="@style/ThemeSecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_hide_dialog_downloading"
        app:backgroundTint="#FCE7E9" />

</LinearLayout>